--- a/src/Ece/ArticleBundle/Resources/views/Article/lister.html.twig
+++ b/src/Ece/ArticleBundle/Resources/views/Article/lister.html.twig
@@ -10,7 +10,7 @@
 
 <ul>
     {% for article in articles %}
-        <li><a href="{{ path('article_afficher', {id: article.id}) }}">{{ article.nom }}</a></li>
+        <li><a href="{{ path('article_afficher', {id: article.id}) }}">{{ article.categorie.nom }} - {{ article.nom }}</a></li>
     {% endfor %}
 </ul>
 {% endblock %}
