--- a/src/Ece/ArticleBundle/Resources/views/Article/lister.html.twig
+++ b/src/Ece/ArticleBundle/Resources/views/Article/lister.html.twig
@@ -12,7 +12,10 @@
 
 <ul>
     {% for article in articles %}
-        <li><a href="{{ path('article_afficher', {id: article.id}) }}">{{ article.categorie.nom }} - {{ article.nom }}</a></li>
+        <li>
+            <a href="{{ path('article_afficher', {id: article.id}) }}">{{ article.categorie.nom }} - {{ article.nom }}</a>
+            - <a href="{{ path('article_modifier', {id: article.id}) }}">Modifier</a>
+        </li>
     {% endfor %}
 </ul>
 {% endblock %}
