--- a/src/Ece/ArticleBundle/Resources/views/Article/modifier.html.twig
+++ b/src/Ece/ArticleBundle/Resources/views/Article/modifier.html.twig
@@ -2,7 +2,7 @@
 
 
 {% block body %}
-    <h1>Moodifier l'article "{{ article.nom }}"</h1>
+    <h1>Modifier l'article "{{ article.nom }}"</h1>
 
     {{ form(formArticle) }}
 
