--- a/src/Ece/ArticleBundle/Resources/views/Article/lister.html.twig
+++ b/src/Ece/ArticleBundle/Resources/views/Article/lister.html.twig
@@ -13,7 +13,7 @@
 <ul>
     {% for article in articles %}
         <li>
-            <a href="{{ path('article_afficher', {id: article.id}) }}">{{ article.categorie.nom }} - {{ article.nom }}</a>
+            <a href="{{ path('article_afficher', {id: article.id}) }}">{{ article.categorie.nom }} - {{ article.nom }}, par {{ article.auteur }}</a>
             - <a href="{{ path('article_modifier', {id: article.id}) }}">Modifier</a>
             - <a href="{{ path('article_supprimer', {id: article.id}) }}">Supprimer</a>
         </li>
